# Pharma-V2

./: .dockerignore  .env.demo  .env.example  .env.production.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  agents.md  claude.md  docker-compose.yml  launch.bat  pending_plan.md  pyproject.toml
.github/workflows/: ci-cd.yaml  ci.yml
docs/: a2a-protocol-guide.md  adr.md  api-integration-guide.md  browser-agent-guide.md  caching-strategy.md  deployment-guide.md  developer-onboarding.md  frontend-architecture.md  ml-training-pipeline-azure.md  resilience-guide.md  runbook.md
docs/adr/: adr-004-servicebus-topic-per-pillar.md  adr-005-keyvault-secret-management.md  adr-006-context-constrained-decoding.md  adr-007-spar-lifecycle.md
docs/standalone-demo/: azure-removal-matrix.md  dependency-map.md  runbook.md
infra/: main.bicep
infra/bicep/: main.bicep
infra/db/init/: 001_initial_schema.sql
infra/k8s/: deployment.yaml  keda-scalers.yaml  secrets.template.yaml
infra/k8s/base/: configmap.yaml  executor-deployment.yaml  kustomization.yaml  namespace.yaml  planner-deployment.yaml  policies.yaml  retriever-deployments.yaml  supervisor-deployment.yaml  supporting-deployments.yaml
infra/k8s/keda/: scaled-objects.yaml
infra/migrations/: 001_initial.py
infra/monitoring/: dashboard.json
scripts/: smoke_standalone_demo.ps1
src/agents/: __init__.py
src/agents/executor/: __init__.py  chart_generator.py  main.py  pdf_engine.py  report_generator.py
src/agents/planner/: Dockerfile  __init__.py  decomposer.py  main.py  orchestrator.py  publisher.py
src/agents/prompt_enhancer/: __init__.py  main.py
src/agents/quality_evaluator/: __init__.py  main.py
src/agents/retrievers/: Dockerfile  __init__.py  base_retriever.py  runtime.py
src/agents/supervisor/: __init__.py  conflict_resolver.py  main.py  validator.py
src/demo/: fixture_loader.py
src/frontend/: Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json
src/mcp/: __init__.py  mcp_server.py
src/ml/: __init__.py  data_collector.py  dpo_training.py
src/shared/: __init__.py  bootstrap.py  config.py
src/shared/a2a/: __init__.py  agent_card.py  agent_mesh.py  capability_contract.py  invoke_endpoint.py  protocol.py  registry.py  sub_swarm_manager.py
src/shared/adapters/: azure_blob_object_store.py  fixture_decomposer.py  fixture_report_generator.py  kafka_task_bus.py  minio_object_store.py  postgres_session_store.py
src/shared/bootstrap/: __init__.py  providers.py
src/shared/infra/: __init__.py  ai_search_client.py  audit.py  auth.py  blob_client.py  cache_middleware.py  celery_app.py  cosmos_client.py  demo_auth.py  embedding_service.py  graph_client.py  health.py  kafka_client.py  keyvault_resolver.py  llm_cache.py  message_broker.py  ner_service.py  network_guard.py  postgres_client.py  rate_limit.py  redis_client.py  servicebus_client.py  stream_events.py  telemetry.py  websocket.py
src/shared/memory/: __init__.py  long_term.py  short_term.py
src/shared/models/: __init__.py  enums.py  schemas.py
src/shared/ports/: decomposition_engine.py  object_store.py  (+3 more)
tests/: __init__.py  test_e2e_keytruda.py  test_integration.py  test_models.py
tests/integration/: test_missing_env_fail_fast.py  test_standalone_session_flow.py
tests/unit/: test_agent_mesh.py  test_blob_client.py  test_chart_generator.py  test_clinical_retriever.py  test_commercial_retriever.py  test_conflict_resolver.py  test_decomposer.py  test_demo_auth.py  test_dpo_training.py  test_fixture_decomposer.py  test_fixture_report_generator.py  test_graph_client.py  test_kafka_task_bus.py  test_keyvault_resolver.py  test_legal_retriever.py  test_llm_cache.py  test_mcp_server.py  test_message_broker.py  test_minio_object_store.py  test_ner_service.py  test_network_guard.py  test_pdf_engine.py  test_postgres_session_store.py  test_prompt_enhancer.py  test_publisher.py  test_quality_evaluator.py  test_rag_pipeline.py  test_redis_client.py  test_reflect.py  test_report_generator.py  test_social_retriever.py  test_supervisor_agent.py  test_validator.py  test_websocket.py
(+52 files in other folders)
