[project]
name = "pharma-agentic-ai"
version = "0.1.0"
description = "Distributed Multi-Agent Pharmaceutical Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "azure-cosmos>=4.9.0",
    "azure-servicebus>=7.14.0",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-storage-blob>=12.24.0",
    "semantic-kernel>=1.15.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "httpx>=0.28.0",
    "weasyprint>=63.0",
    "matplotlib>=3.10.0",
    "plotly>=5.24.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "websockets>=14.0",
    # New infrastructure deps (Phase 1-10)
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "aiokafka>=0.11.0",
    "celery[redis]>=5.4.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
    "openai>=1.55.0",
    "aiohttp>=3.10.0",
    "tavily-python>=0.5.0",
    "neo4j>=5.25.0",
    "mcp[cli]>=1.5.0",
    "h2>=4.1.0",            # HTTP/2 support for httpx (mesh router)
    "azure-search-documents>=11.6.0",  # Azure AI Search SDK (vector + hybrid + semantic)
    "tiktoken>=0.7.0",      # Token counting for chunk size enforcement
    "azure-monitor-opentelemetry>=1.6.0",  # Application Insights native OTel SDK
    "selectolax>=0.3.0",           # Fast HTML parser for IPO/CDSCO scraping
    "yfinance>=0.2.0",             # Financial data proxy for Commercial retriever
    "azure-ai-textanalytics>=5.3.0",  # Azure AI Language NER
    "azure-messaging-webpubsubservice>=1.1.0",  # Azure Web PubSub
    "gremlinpython>=3.7.0",        # Cosmos DB Gremlin API graph queries
    "minio>=7.2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "fakeredis>=2.25.0",
    "testcontainers>=4.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
